crates/haneul/tests/snapshots/shell_tests__haneul_move_new_tests__new_then_test.sh.snap
---
source: crates/haneul/tests/shell_tests.rs
description: tests/shell_tests/haneul_move_new_tests/new_then_test.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that haneul move new followed by haneul move test succeeds
haneul move new example
cd example && haneul move test

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY HaneulSystem
INCLUDING DEPENDENCY Haneul
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
